@@ -307,6 +307,7 @@ class YiiBase
 		'CClipWidget' => '/web/widgets/CClipWidget.php',
 		'CContentDecorator' => '/web/widgets/CContentDecorator.php',
 		'CFilterWidget' => '/web/widgets/CFilterWidget.php',
+		'CFlexWidget' => '/web/widgets/CFlexWidget.php',
 		'CInputWidget' => '/web/widgets/CInputWidget.php',
 		'CMaskedTextField' => '/web/widgets/CMaskedTextField.php',
 		'CMultiFileUpload' => '/web/widgets/CMultiFileUpload.php',
